<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="credentials"
            type="br.com.ilhasoft.voy.models.Credentials" />

        <variable
            name="presenter"
            type="br.com.ilhasoft.voy.ui.login.LoginPresenter" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Space
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_avatars_login" />

        <Space
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="0.3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/hey"
            android:textColor="@color/bright_sky_blue"
            android:textSize="40sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="0.2" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/username_hint"
                android:text="@={credentials.username}"
                app:validateEmpty="@{true}" />

        </android.support.design.widget.TextInputLayout>

        <Space
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="0.12" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="11.5dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:text="@={credentials.password}"
                app:validateMinLength="@{6}" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login_error"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="12sp"
            android:visibility="gone"
            tools:visibility="visible" />

        <Space
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="0.6" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/rounded_button"
            android:onClick="@{() -> presenter.onClickLogin(credentials)}"
            android:text="@string/login_label"
            android:textAllCaps="false"
            android:textColor="@color/cool_grey" />

        <android.support.v4.widget.Space
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

</layout>
