<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="editingPhoto"
            type="Boolean" />

        <variable
            name="presenter"
            type="br.com.ilhasoft.voy.ui.account.AccountPresenter" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/toolbar"
                layout="@layout/view_toolbar"
                app:actionName="@{@string/save}"
                app:title="@{@string/title_activity_account}" />

        </android.support.design.widget.AppBarLayout>

        <Space
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="0.1" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="5dp"
                android:src="@drawable/ic_account_avatar"/>

            <ImageButton
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="bottom|end"
                android:layout_marginBottom="5dp"
                android:src="@drawable/ic_change"
                android:visibility="@{editingPhoto ? View.GONE : View.VISIBLE}"
                tools:visibility="visible" />

        </FrameLayout>

        <Space
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="0.1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="@{editingPhoto ? View.GONE : View.VISIBLE}"
            tools:visibility="visible">


            <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:background="@color/white" />

            <Space
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_weight="0.05" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/username_hint" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/email" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/password_hint" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/change"
                    android:visibility="visible" />

            </FrameLayout>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/gridview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="@{editingPhoto ? View.VISIBLE : View.GONE}"
            tools:visibility="gone" />

        <Space
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:visibility="@{editingPhoto ? View.VISIBLE : View.GONE}"
            tools:visibility="visible" />

        <Button
            style="?android:borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/logout"
            android:textAllCaps="false" />

    </LinearLayout>

</layout>
