<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="view"
            type="android.view.View" />

        <variable
            name="hasLinks"
            type="Boolean" />

        <variable
            name="presenter"
            type="br.com.ilhasoft.voy.ui.addreport.description.AddDescriptionFragmentPresenter" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="0.1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:fontFamily="sans-serif-black"
            android:lineSpacingExtra="2sp"
            android:text="@string/add_title_and_description"
            android:textColor="@color/bright_sky_blue"
            android:textSize="35sp"
            android:textStyle="normal"
            tools:text="Title and\nDescription" />

        <Space
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="0.1" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:hintTextAppearance="@style/HintStyle">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/title_hint"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:nextFocusDown="@id/description"
                app:validateEmpty="@{true}">

            </android.support.design.widget.TextInputEditText>

        </android.support.design.widget.TextInputLayout>

        <Space
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="0.1" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:hintTextAppearance="@style/HintStyle">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/description_hint"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                app:validateEmpty="@{true}">

            </android.support.design.widget.TextInputEditText>

        </android.support.design.widget.TextInputLayout>

        <Space
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="0.2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"
            android:text="@string/add_link"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="normal"
            tools:text="Add Link" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/link"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/btn_themes_white"
                android:inputType="text"
                android:padding="5dp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:background="@drawable/btn_add_link"
                android:onClick="@{() -> presenter.addLink()}"
                android:padding="7dp"
                android:src="@drawable/ic_add_link" />

        </LinearLayout>

        <Space
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="@{hasLinks ? view.GONE : view.VISIBLE}"
            tools:visibility="gone" />

        <Space
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:visibility="@{hasLinks ? view.VISIBLE : view.GONE}"
            tools:visibility="visible" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/linkList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            tools:visibility="visible">

        </android.support.v7.widget.RecyclerView>

        <Space
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:visibility="@{hasLinks ? view.VISIBLE : view.GONE}"
            tools:visibility="visible" />

    </LinearLayout>

</layout>
